<resources>
    <string name="app_name">IsraelA</string>
    <string name="facebook_app_id">913804346269779</string>
    <string name="fb_login_protocol_scheme">fb913804346269779</string>
    <string name="facebook_client_token">cdf5215c7e32736841ff2b05abf2b24c</string>
    <string name="add_review">Add Review</string>
    <string name="reviews">Reviews</string>
    <string name="site_detail">Site Detail</string>
    <string name="site_name">site name</string>
    <string name="your_name">Your Name</string>
    <string name="your_review">Your Review</string>
    <string name="add">Add</string>
    <string name="change_shade_rate">Change Shade Rate</string>
    <string name="change_detail">Change Detail</string>
    <string name="change_location">Change Location</string>
    <string name="change_shade_rate_review_num">Change Shade Rate Review Num</string>
    <string name="change_rate">Change Rate</string>


</resources>