<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="Edit"
        android:textSize="25sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/change_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="Change ID"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/change_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="Change Name"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/change_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/change_rate"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/main_rate_review_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="Change Main Rate Review Num"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/change_shade_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/change_shade_rate"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/change_shade_rate_review_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/change_shade_rate_review_num"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/change_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/change_detail"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/change_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/change_location"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/add"
        android:textColor="#546E7A" />

</LinearLayout>