<?xml version="1.0" encoding="utf-8"?>



    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPagerMain"
                android:layout_width="370dp"
                android:layout_height="340dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp" />

            <TextView
                android:id="@+id/siteName"
                android:layout_width="258dp"
                android:layout_height="97dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center_vertical"
                android:text="@string/site_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/siteDetail"
                android:layout_width="358dp"
                android:layout_height="368dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center_vertical"
                android:text="@string/site_detail"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/darkerGray">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reviews"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/addReviewButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="5dp"
                    android:background="@null"
                    android:text="@string/add_review"
                    android:textColor="@color/red"
                    android:textSize="15sp" />

            </androidx.appcompat.widget.Toolbar>

            <ListView

                android:id="@+id/reviewList"
                android:layout_width="match_parent"
                android:layout_height="500dp" />


        </LinearLayout>


    </ScrollView>

